# mode-client

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
mode_client/: __init__.py  cli.py  clients.py  models.py
tests/: test_cli.py  test_clients.py  test_models.py
